--- a/ncp-web/l10n/de_DE.json
+++ b/ncp-web/l10n/de_DE.json
@@ -4,12 +4,17 @@
   "run": "Ausführen",
   "skip": "Überspringen",
   "close": "Schließen",
+  "nc-audit": "Sicherheitsüberprüfung",
+  "nc-automount": "Automatische Datenträgereinbindung",
+  "nc-autoupdate-ncp": "Automatische NextCloudPi Updates",
+  "nc-backup-auto": "Automatische Backups",
+  "nc-backup": "Backup erstellen",
   "nc-database": "Datenbank",
   "nc-datadir": "Datenverzeichnis",
   "nc-export-ncp": "NCP Export",
   "nc-fix-permissions": "Berechtigungen wiederherstellen",
   "nc-format-USB": "USB Laufwerke formatieren",
-  "nc-format-ports": "Portweiterleitungen",
+  "nc-forward-ports": "Portweiterleitungen",
   "nc-httpsonly": "HTTPS Zwang",
   "nc-import-ncp": "NCP Import",
   "nc-info": "System Informationen",
@@ -18,6 +23,7 @@
   "nc-nextcloud": "Nextcloud Einstellungen",
   "nc-notify-updates": "Update-Benachrichtigungen",
   "nc-passwd": "NCP Passwort",
+  "nc-ramlogs": "Ram Logs",
   "nc-restore": "Wiederherstellung",
   "nc-scan-auto": "Automatischer Datei-Scan",
   "nc-scan": "Datei-Scan",
@@ -28,5 +34,6 @@
   "nc-update": "Update",
   "nc-webui": "NCP Weboberfläche",
   "nc-wifi": "WLAN",
-  "unattended-upgrades": "Unüberwachte System-Upgrades"
+  "unattended-upgrades": "Unüberwachte System-Upgrades",
+  "Configure NextCloudPi features": "NextCloudPi Funktionen konfigurieren"
 }}
