--- a/etc/nextcloudpi-config.d/l10n/nc-backup/de.json
+++ b/etc/nextcloudpi-config.d/l10n/nc-backup/de.json
@@ -1,3 +1,7 @@
 {"translations": {
-    "nc-backup": "Backup erstellen"
+    "nc-backup": "Backup erstellen",
+    "DESTDIR": "Zielverzeichnis",
+    "INCLUDEDATA": "Inkl. Dateien",
+    "COMPRESS:": "Komprimieren",
+    "BACKUPLIMIT": "Maximale Anzahl"
 }}
