Fix type in translations for nc-backup

--- a/etc/nextcloudpi-config.d/l10n/nc-backup/de.json
+++ b/etc/nextcloudpi-config.d/l10n/nc-backup/de.json
@@ -2,6 +2,6 @@
     "nc-backup": "Backup erstellen",
     "DESTDIR": "Zielverzeichnis",
     "INCLUDEDATA": "Inkl. Dateien",
-    "COMPRESS:": "Komprimieren",
+    "COMPRESS": "Komprimieren",
     "BACKUPLIMIT": "Maximale Anzahl"
 }}
