re-rename to NCPi

--- a/etc/ncp-config.d/l10n/nc-export-ncp/es.json
+++ b/etc/ncp-config.d/l10n/nc-export-ncp/es.json
@@ -1,7 +1,7 @@
 {
     "translations": {
         "DIR": "Directorio",
-        "Export NextCloudPlus configuration": "Exportar la configuración de NextCloudPlus",
+        "Export NextCloudPi configuration": "Exportar la configuración de NextCloudPi",
         "nc-export-ncp": "nc-export-ncp"
     }
 }
