--- a/etc/ncp-config.d/l10n/nc-limits/es.json
+++ b/etc/ncp-config.d/l10n/nc-limits/es.json
@@ -1,6 +1,6 @@
 {
     "translations": {
-        "Configure system limits for NextCloudPlus": "Configura los límites de sistema para NextCloudPlus",
+        "Configure system limits for NextCloudPi": "Configura los límites de sistema para NextCloudPi",
         "MAXFILESIZE":"Tamaño máximo de archivo en subida",
         "MEMORYLIMIT": "Límite de memoria",
         "PHPTHREADS": "Hilos PHP",
