--- a/etc/ncp-config.d/l10n/nc-passwd/es.json
+++ b/etc/ncp-config.d/l10n/nc-passwd/es.json
@@ -1,7 +1,7 @@
 {
     "translations": {
         "CONFIRM": "Confirmar",
-        "Change password for the NextCloudPlus Panel": "Cambiar la contraseña para el Panel de NextCloudPlus",
+        "Change password for the NextCloudPi Panel": "Cambiar la contraseña para el Panel de NextCloudPi",
         "PASSWORD": "Contraseña",
         "nc-passwd": "nc-passwd"
     }
