--- a/etc/ncp-config.d/l10n/nc-autoupdate-ncp/de.json
+++ b/etc/ncp-config.d/l10n/nc-autoupdate-ncp/de.json
@@ -1,3 +1,3 @@
 {"translations": {
-    "nc-autoupdate-ncp": "Automatische NextCloudPlus Updates"
+    "nc-autoupdate-ncp": "Automatische NextCloudPi Updates"
 }}
