--- a/etc/ncp-config.d/l10n/nc-import-ncp/es.json
+++ b/etc/ncp-config.d/l10n/nc-import-ncp/es.json
@@ -1,7 +1,7 @@
 {
     "translations": {
         "FILE": "Fichero",
-        "Import NextCloudPlus configuration from file": "Importa la configuración de NextCloudPlus desde un fichero",
+        "Import NextCloudPi configuration from file": "Importa la configuración de NextCloudPi desde un fichero",
         "nc-import-ncp": "nc-import-ncp"
     }
 }
