--- a/etc/ncp-config.d/l10n/nc-info/es.json
+++ b/etc/ncp-config.d/l10n/nc-info/es.json
@@ -1,6 +1,6 @@
 {
     "translations": {
-        "Print NextCloudPlus system info": "Muestra información de sistema de NCP",
+        "Print NextCloudPi system info": "Muestra información de sistema de NCP",
         "nc-info": "nc-info"
     }
 }
