--- a/ncp-web/l10n/zn.json
+++ b/ncp-web/l10n/zn.json
@@ -1,7 +1,8 @@
 {
     "translations": {
-        "Configure NextCloudPi features": "Configurar NextCloudPi",
-        "Run": "Ejecutar",
-        "This application requires JavaScript for correct operation. Please %s enable JavaScript %s and reload the page.": "Esta aplicación requiere Javascript para un funcionamiento correcto. Por favor %s active Javascript %s y recarge la página."
+        "Configure NextCloudPi features": "快速設定Nextcloudpi的主要功能",
+        "Run": "開始吧",
+        "Skip":"跳過",
+        "This application requires JavaScript for correct operation. Please %s enable JavaScript %s and reload the page.": "您的瀏覽器已禁用JavaScript，請%s 啟動JavaScript %s並重新載入頁面。"
     }
 }
