--- a/etc/ncp-config.d/l10n/UFW/zn.json
+++ b/etc/ncp-config.d/l10n/UFW/zn.json
@@ -1,1 +1,10 @@
-﻿{"translations":{"ACTIVE":"開啟","HTTP":"HTTP","HTTPS":"HTTPS","SSH":"SSH"}}
+{
+    "translations":{
+        "ACTIVE":"開啟",
+        "HTTP":"HTTP",
+        "HTTPS":"HTTPS",
+        "SSH":"SSH",
+        "Uncomplicated Firewall":"簡易防火牆(UFW)",
+        "Beware of blocking the SSH port you are using!":"保護您使用SSH"
+    }
+}
