--- a/etc/ncp-config.d/l10n/dnsmasq/zn.json
+++ b/etc/ncp-config.d/l10n/dnsmasq/zn.json
@@ -1,1 +1,11 @@
-﻿{"translations":{"ACTIVE":"開啟","DOMAIN":"域名","DNSSERVER":"網路域名伺服器","CACHESIZE":"緩存大小"}}
+{
+    "translations": {
+        "ACTIVE": "開啟",
+        "CACHESIZE": "緩存大小",
+        "DNS server with cache": "DNS伺服器(緩存)",
+        "DNSSERVER": "DNS伺服器",
+        "DOMAIN": "域名",
+        "Remember to point your PC and devices DNS or\n you router DNS to your Raspberry Pi IP": "請記住指向你的PC和裝置所用的DNS或者路由器的DNS到你的raspberry pi的IP",
+        "dnsmasq": "dnsmasq"
+    }
+}
