--- a/etc/ncp-config.d/l10n/UFW/zh_TW.json
+++ b/etc/ncp-config.d/l10n/UFW/zh_TW.json
@@ -5,6 +5,7 @@
         "HTTPS":"HTTPS",
         "SSH":"SSH",
         "Uncomplicated Firewall":"簡易防火牆(UFW)",
-        "Beware of blocking the SSH port you are using!":"保護您使用SSH"
+        "Beware of blocking the SSH port you are using!":"保護您使用SSH",
+        "Run":"存檔"
     }
 }
