--- a/etc/ncp-config.d/l10n/dnsmasq/zh_TW.json
+++ b/etc/ncp-config.d/l10n/dnsmasq/zh_TW.json
@@ -6,6 +6,7 @@
         "DNSSERVER": "DNS伺服器",
         "DOMAIN": "域名",
         "Remember to point your PC and devices DNS or\n you router DNS to your Raspberry Pi IP": "請記住指向你的PC和裝置所用的DNS或者路由器的DNS到你的raspberry pi的IP",
-        "dnsmasq": "dnsmasq"
+        "dnsmasq": "dnsmasq",
+        "Run":"存檔"
     }
 }
