--- a/etc/ncp-config.d/l10n/freeDNS/zh_TW.json
+++ b/etc/ncp-config.d/l10n/freeDNS/zh_TW.json
@@ -4,6 +4,7 @@
         "UPDATEHASH":"Update Hash",
         "DOMAIN":"域名",
         "UPDATEINTERVAL":"更新間隔時間",
-        "freeDNS":"freeDNS"
+        "freeDNS":"freeDNS",
+        "Run":"存檔"
     }
 }
