--- a/etc/ncp-config.d/l10n/nc-admin/zh_TW.json
+++ b/etc/ncp-config.d/l10n/nc-admin/zh_TW.json
@@ -4,6 +4,7 @@
     "USER":"管理員帳號",
     "PASSWORD":"密碼",
     "CONFIRM":"再次輸入密碼",
-    "nc-admin":"修改Nextcloud管理員密碼"
+    "nc-admin":"修改Nextcloud管理員密碼",
+    "Run":"修改並儲存"
     }
 }
