--- a/etc/ncp-config.d/l10n/UFW/zh_TW.json
+++ b/etc/ncp-config.d/l10n/UFW/zh_TW.json
@@ -6,6 +6,6 @@
         "SSH":"SSH",
         "Uncomplicated Firewall":"簡易防火牆(UFW)",
         "Beware of blocking the SSH port you are using!":"保護您使用SSH",
-        "Run":"存檔"
+        "Run":"儲存"
     }
 }
