--- a/etc/ncp-config.d/l10n/freeDNS/zh_TW.json
+++ b/etc/ncp-config.d/l10n/freeDNS/zh_TW.json
@@ -5,6 +5,6 @@
         "DOMAIN":"域名",
         "UPDATEINTERVAL":"更新間隔時間",
         "freeDNS":"freeDNS",
-        "Run":"存檔"
+        "Run":"儲存"
     }
 }
