--- a/ncp-web/l10n/zh.json
+++ b/ncp-web/l10n/zh.json
@@ -1,6 +1,6 @@
 {
     "translations": {
-        "Configure NextCloudPi features": "快速設定Nextcloudpi的主要功能",
+        "Configure NxtCloudPi features": "設定Nextcloudpi的主要功能",
         "Run": "開始吧",
         "Skip":"跳過",
         "This application requires JavaScript for correct operation. Please %s enable JavaScript %s and reload the page.": "您的瀏覽器已禁用JavaScript，請%s 啟動JavaScript %s並重新載入頁面。"
