fix translate(and update)

--- a/etc/ncp-config.d/l10n/freeDNS/zh.json
+++ b/etc/ncp-config.d/l10n/freeDNS/zh.json
@@ -4,7 +4,6 @@
         "UPDATEHASH":"Update Hash",
         "DOMAIN":"域名",
         "UPDATEINTERVAL":"更新間隔時間",
-        "freeDNS":"freeDNS",
-        "Run":"儲存"
+        "DDNS FreeDNS client (need account)":"DDNS FreeDNS client (需要帳號)"
     }
 }
