--- a/etc/ncp-config.d/l10n/letsencrypt/zh.json
+++ b/etc/ncp-config.d/l10n/letsencrypt/zh.json
@@ -3,7 +3,7 @@
         "Automatic signed SSL certificates": "letsencrypt",
         "DOMAIN": "域名",
         "EMAIL": "電子郵件",
-        "Internet access is required for this configuration to complete\nBoth ports 80 and 443 need to be accessible from the internet\n \nYour certificate will be automatically renewed every month": "使用letsencrypt提供的SSL證書\n若要執行這個設定，請連結網路\n並且需要開啟Port 80和443\n\n您的證書將每個月自動更新。",
+        "Internet access is required for this configuration to complete\nBoth ports 80 and 443 need to be accessible from the internet\n \nYour certificate will be automatically renewed every month": "使用letsencrypt提供的SSL證書\n在執行這個動作之前，請開啟網路且開啟Port 80和443\n完成此動作之後，使用的證書將每個月自動更新續續期。",
         "Warning": "警告",
         "letsencrypt": "SSL證書",
         "Run":"開始建立證書"
