Update and rename etc/ncp-config.d/l10n/no-ip/zh.json to etc/ncp-config.d/l10n/DDNS_no-ip/zh.json

--- a/etc/ncp-config.d/l10n/DDNS_no-ip/zh.json
+++ b/etc/ncp-config.d/l10n/DDNS_no-ip/zh.json
@@ -7,6 +7,7 @@
         "PASS": "密碼",
         "TIME": "間隔時間(更新IP)",
         "USER": "使用者",
-        "no-ip": "no-ip"
+        "no-ip": "no-ip",
+        "DDNS_no-ip": "no-ip(DDNS)"
     }
 }
