--- a/etc/ncp-config.d/l10n/DDNS_spDYN/zh.json
+++ b/etc/ncp-config.d/l10n/DDNS_spDYN/zh.json
@@ -1,1 +1,9 @@
-﻿{"translations":{"ACTIVE":"開啟","DOMAIN":"域名","TOKEN":"TOKEN"}}
+{
+    "translations":{
+        "ACTIVE":"開啟",
+        "DOMAIN":"域名",
+        "TOKEN":"TOKEN",
+        "Free Dynamic DNS provider (need account from spdyn.de)":"使用spdyn.de提供的免費提供的動態DNS(DDNS)",
+        "DDNS_spDYN":"spDYN(DDNS)"
+    }
+}
