--- a/etc/ncp-config.d/l10n/nc-nextcloud/zh.json
+++ b/etc/ncp-config.d/l10n/nc-nextcloud/zh.json
@@ -1,12 +1,12 @@
 {
-    "translations":{
-        "VER":"版本",
-        "BETA":"測試",
-        "MAXFILESIZE":"最大檔案大小",
-        "MEMORYLIMIT":"記憶體限制",
-        "MAXTRANSFERTIME":"最大傳輸時間",
-        "Install any NextCloud version":"重新下載安裝Nextcloud",
-        "This new installation will cleanup current/nNextCloud instance, including files and database./n/nYou can later use nc-init to configure to NextCloudPi defaults/n/n** perform backup before proceding **/n/nYou can use nc-backup":"開始後，我們將重新從Nextcloud官方伺服器下該版本的Nextcloud/n安裝結束後您可以使用nc-init讓我們自動設定您的Nextcloud成NextcloudPi/n或者在開始前備份您的資料(nc-backup)",
-        "run":"開始安裝"
-    }
+  "translations":{
+    "VER":"版本",
+    "BETA":"測試版",
+    "MAXFILESIZE":"最大檔案大小",
+    "MEMORYLIMIT":"記憶體限制",
+    "MAXTRANSFERTIME":"最大傳輸時間",
+    "NextCloud installation":"重新下載安裝NextCloud",
+    "This new installation will cleanup current\nNextCloud instance, including files and database.\n\nYou can later use nc-init to configure to NextCloudPi defaults\n\n** perform backup before proceding **\n\nYou can use nc-backup ":"這個動作安裝將清理目前NextCloud的所有內容，所有的文件及數據庫都將會被刪除。\n安裝完後您可以使用初始化NextCloud來快速設定回系統默認值以及資料庫\n或者您可以在開始動作前先進行備份(NC備份)",
+    "nc-nextcloud":"重新下載安裝NC"
+  }
 }
