--- a/etc/ncp-config.d/l10n/nc-notify-updates/zh.json
+++ b/etc/ncp-config.d/l10n/nc-notify-updates/zh.json
@@ -3,6 +3,6 @@
         "ACTIVE":"開啟",
         "USER":"使用者",
         "Notify in NC when a NextCloudPi update is available":"在NextcloudPi需要更新時在Nextcloud通知您",
-        "run":"儲存"
+        "nc-notify-updates":"NCP更新通知"
     }
 }
