--- a/etc/ncp-config.d/l10n/nc-passwd/zh.json
+++ b/etc/ncp-config.d/l10n/nc-passwd/zh.json
@@ -1,9 +1,1 @@
-{
-    "translations": {
-        "CONFIRM": "再輸入一次密碼",
-        "Change password for the NextCloudPi Panel": "修改NextCloudPi 設定頁面登入密碼",
-        "PASSWORD": "密碼",
-        "nc-passwd": "修改NCP密碼",
-        "run":"儲存"
-    }
-}
+﻿{"translations":{"PASSWORD":"密碼","CONFIRM":"再次輸入密碼"}}
