--- a/etc/ncp-config.d/l10n/unattended-upgrades/zh.json
+++ b/etc/ncp-config.d/l10n/unattended-upgrades/zh.json
@@ -1,8 +1,1 @@
-{
-    "translations": {
-        "ACTIVE": "開啟",
-        "AUTOREBOOT": "自動重新開機",
-        "Automatic installation of security updates. Keep your cloud safe": "自動安裝安全更新。保護伺服器的安全",
-        "unattended-upgrades": "自動安裝安全更新"
-    }
-}
+﻿{"translations":{"ACTIVE":"啟動","AUTOREBOOT":"重新開機"}}
