--- a/etc/ncp-config.d/l10n/DDNS_freeDNS/zh.json
+++ b/etc/ncp-config.d/l10n/DDNS_freeDNS/zh.json
@@ -3,7 +3,7 @@
         "ACTIVE":"開啟",
         "UPDATEHASH":"Update Hash",
         "DOMAIN":"域名",
-        "UPDATEINTERVAL":"更新IP時間間隔",
-        "DDNS FreeDNS client (need account)":"DDNS FreeDNS client (需要帳號)",
+        "UPDATEINTERVAL":"更新IP時間間隔"
+        //"DDNS FreeDNS client (need account)":"DDNS FreeDNS client (需要帳號)",
     }
 }
