--- a/etc/ncp-config.d/l10n/nc-backup-auto/zh.json
+++ b/etc/ncp-config.d/l10n/nc-backup-auto/zh.json
@@ -7,7 +7,7 @@
         "BACKUPDAYS":"備份日期",
         "BACKUPLIMIT":"備份限制",
         "Periodic backups":"定期自動備份",
-        "nc-backup-auto":"自動備份"
+        "nc-backup-auto":"自動備份NC"
         
     }
 }
