--- a/etc/ncp-config.d/l10n/nc-passwd/zh.json
+++ b/etc/ncp-config.d/l10n/nc-passwd/zh.json
@@ -1,6 +1,6 @@
 {
   "translations":{
-    "Change password for the NextCloudPi Panel":"修改NextCloudPi網頁介面的密碼"
+    "Change password for the NextCloudPi Panel":"修改NextCloudPi網頁介面的密碼",
     "PASSWORD":"密碼",
     "CONFIRM":"再次輸入密碼"
   }
