--- a/etc/ncp-config.d/l10n/nc-update-nextcloud/zh.json
+++ b/etc/ncp-config.d/l10n/nc-update-nextcloud/zh.json
@@ -2,6 +2,7 @@
   "translations":{
       "Update current instance to a new Nextcloud version":"更新Nextcloud版本",
       "VERSION":"版本號",
-      "nc-update-nextcloud":"更新NC版本"
+      "nc-update-nextcloud":"更新NC版本",
+      "Set to 0 to update to the latest avaliable version":"輸入0將會更新到最新的版本"
   }
 }
