--- a/etc/ncp-config.d/l10n/unattended-upgrades/zh.json
+++ b/etc/ncp-config.d/l10n/unattended-upgrades/zh.json
@@ -1,1 +1,7 @@
-﻿{"translations":{"ACTIVE":"啟動","AUTOREBOOT":"重新開機"}}
+{
+  "translations":{
+    "ACTIVE":"啟動",
+    "AUTOREBOOT":"重新開機",
+    "Automatic installation of security updates. Keep your cloud safe":"自動安裝安全更新"
+  }
+}
