--- a/etc/ncp-config.d/l10n/unattended-upgrades/zh.json
+++ b/etc/ncp-config.d/l10n/unattended-upgrades/zh.json
@@ -2,7 +2,7 @@
   "translations":{
     "ACTIVE":"啟動",
     "AUTOREBOOT":"重新開機",
-    "Automatic installation of security updates. Keep your cloud safe":"自動安裝安全更新",
-    "unattended-upgrades":"無人值守升級"
+    "Automatic installation of security updates. Keep your cloud safe":"自動安裝安全",
+    "unattended-upgrades":"自動更新安全更新"
   }
 }
