--- a/etc/ncp-config.d/l10n/nc-autoupdate-nc/zh.json
+++ b/etc/ncp-config.d/l10n/nc-autoupdate-nc/zh.json
@@ -1,7 +1,7 @@
 {
     "translations":{
         "ACTIVE":"開啟",
-        "NOTIFYUSER":"提示使用者",
+        "NOTIFYUSER":"提醒用戶",
         "Automatically apply Nextcloud updates":"自動更新Nextcloud",
         "nc-autoupdate-nc":"自動更新NC"
     }
