--- a/etc/ncp-config.d/l10n/nc-static-IP/zh.json
+++ b/etc/ncp-config.d/l10n/nc-static-IP/zh.json
@@ -2,7 +2,7 @@
   "translations":{
     "ACTIVE":"開啟",
     "IP":"IP地址",
-    "Set up a static IP address (on), or DHCP (off)":"設定靜態IP地址（開啟）或 DHCP（關閉）",
+    "Set up a static IP address (ACTIVE=yes), or DHCP (ACTIVE=no)":"設定靜態IP地址（開啟=yes）或 DHCP（關閉=no）",
     "nc-static-IP":"修改網路型態(靜態IP)"
   }
 }
