ncp-web: added a lot of german locales
Signed-off-by: Huizerd <15855769+Huizerd@users.noreply.github.com>

--- a/etc/ncp-config.d/l10n/nc-automount/de.json
+++ b/etc/ncp-config.d/l10n/nc-automount/de.json
@@ -1,3 +1,4 @@
 {"translations": {
-    "nc-automount": "Automatische Datenträgereinbindung"
+    "nc-automount": "Automatische Datenträgereinbindung",
+    "ACTIVE":"Aktiviert"
 }}
