--- a/etc/ncp-config.d/l10n/nc-webui/de.json
+++ b/etc/ncp-config.d/l10n/nc-webui/de.json
@@ -1,3 +1,7 @@
-{"translations": {
-    "nc-webui": "NCP Weboberfläche"
-}}
+{
+    "translations":{
+      "ACTIVE":"Aktiviert",
+      "Enable or disable the NCP web interface":"Aktivieren oder deaktivieren von der NCP-Weboberfläche",
+      "nc-webui":"NCP-Weboberfläche"
+    }
+  }
