--- a/etc/ncp-config.d/l10n/unattended-upgrades/de.json
+++ b/etc/ncp-config.d/l10n/unattended-upgrades/de.json
@@ -1,3 +1,8 @@
-{"translations": {
-    "unattended-upgrades": "Unüberwachte System-Upgrades"
-}}
+{
+    "translations": {
+        "ACTIVE": "Aktiviert",
+        "AUTOREBOOT": "Automatischer Neustart",
+        "Automatic installation of security updates. Keep your cloud safe": "Automatische Installation von Sicherheits-Updates. Halte deine Cloud sicher",
+        "unattended-upgrades": "Unüberwachte System-Upgrades"
+    }
+}
