--- a/etc/ncp-config.d/l10n/nc-backup-auto/de.json
+++ b/etc/ncp-config.d/l10n/nc-backup-auto/de.json
@@ -1,3 +1,12 @@
-{"translations": {
-    "nc-backup-auto": "Automatische Backups"
-}}
+{
+    "translations":{
+    "ACTIVE":"Aktiviert",
+        "DESTDIR":"Ziel-Verzeichnis",
+        "INCLUDEDATA":"Daten mit sichern",
+        "COMPRESS":"Komprimieren",
+        "BACKUPDAYS":"Sicherungs-Periode (in Tage)",
+        "BACKUPLIMIT":"Sicherungs-Limit",
+        "nc-backup-auto":"Automatische Sicherung"
+        
+    }
+}
