--- a/etc/ncp-config.d/l10n/nc-nextcloud/pt.json
+++ b/etc/ncp-config.d/l10n/nc-nextcloud/pt.json
@@ -6,7 +6,7 @@
     "MEMORYLIMIT":"Limíte de Memória",
     "MAXTRANSFERTIME":"Tempo máximo de transferência",
     "NextCloud installation":"Instalação NextCloud",
-    "This new installation will cleanup current\nNextCloud instance, including files and database.\n\nYou can later use nc-init to configure to NextCloudPi defaults\n\n** perform backup before proceding **\n\nYou can use nc-backup ":"Esta nova instalação irá apagar a instância atual\ndo NextCloud, incluindo os arquivos e o Banco de Dados.\nVocê depois pode usar o nc-init para configurar os padrões do NextCloudPi\n\n**Realize Backup antes de Continuar**\n\nVocê pode usar o nc-backup",
+    "This new installation will cleanup current\nNextCloud instance, including files and database.\n\nYou can later use nc-init to configure to NextCloudPi defaults\n\n** perform backup before proceding **\n\nYou can use nc-backup ":"Esta nova instalação irá apagar a instância atual\ndo NextCloud, incluindo os arquivos e o Banco de Dados.\nVocê depois pode usar o nc-init para configurar os padrões do NextcloudPi\n\n**Realize Backup antes de Continuar**\n\nVocê pode usar o nc-backup",
     "nc-nextcloud":"nc-nextcloud",
     "Install any NextCloud version":"Instalar qualquer versão NextCloud"
   }
