--- a/etc/ncp-config.d/l10n/nc-update/pt.json
+++ b/etc/ncp-config.d/l10n/nc-update/pt.json
@@ -1,6 +1,6 @@
 {
   "translations":{
-  "Update NextCloudPi":"atualização NextCloudPi",
+  "Update NextCloudPi":"atualização NextcloudPi",
   "nc-update":"nc-atualização"
   }
 }
