--- a/etc/ncp-config.d/l10n/nc-update/zh.json
+++ b/etc/ncp-config.d/l10n/nc-update/zh.json
@@ -1,6 +1,6 @@
 {
   "translations":{
-  "Update NextCloudPi":"更新NextCloudPi",
+  "Update NextCloudPi":"更新NextcloudPi",
   "nc-update":"更新NCP"
   }
 }
